--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: nnetpredint
 Type: Package
 Title: Prediction intervals of multi-layer neural networks
-Version: 1.1
+Version: 1.2
 Date: 2015-11-22
-Suggests: MASS,nnet,neuralnet
+Suggests: MASS, nnet, neuralnet, RSNNS
 Author: Xichen Ding <rockingdingo@gmail.com>
 Maintainer: Xichen Ding <rockingdingo@gmail.com>
-Description: This package provides intervals to the prediction value from neural network models (e.g.backpropagation) at certain confidence level.It can take the output from models trained by other packages like nnet, neuralnet, etc.
+Description: This package provides intervals to the prediction from neural network models (e.g.backpropagation) at certain confidence level.It can take the output from models trained by other packages like nnet, neuralnet, RSNNS, etc.
 License: GPL (>= 2)
